--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,5 +25,5 @@ springdoc.api-docs.path=/v3/api-docs
 
 javamelody.enabled=true
 
-logging.level.ru.Roman.NauJava=INFO
+logging.level.ru.Roman.NauJava=DEBUG
 management.endpoints.web.exposure.include=health,info,prometheus
